Fix startup crash without gms; bump version

--- a/app/src/main/res/xml-v25/shortcuts.xml
+++ b/app/src/main/res/xml-v25/shortcuts.xml
@@ -7,10 +7,13 @@
         android:shortcutLongLabel="@string/title_analyse"
         android:shortcutDisabledMessage=
             "@string/title_analyse"
-        android:icon="@drawable/ic_launcher_normal">
+        android:icon="@drawable/ic_outline_analytics_32">
         <intent
             android:action="android.intent.action.VIEW"
-            android:data="amazeutils://teamamaze.xyz/analyse" />
+            android:data="amaze://teamamaze.xyz/analyse"
+            android:targetClass="com.amaze.fileutilities.home_page.MainActivity"
+            android:targetPackage="com.amaze.fileutilities"
+            />
     </shortcut>
     <shortcut
         android:shortcutId="TransferFragment"
@@ -19,9 +22,12 @@
         android:shortcutLongLabel="@string/title_transfer"
         android:shortcutDisabledMessage=
             "@string/title_transfer"
-        android:icon="@drawable/ic_launcher_normal">
+        android:icon="@drawable/ic_outline_connect_without_contact_32">
         <intent
             android:action="android.intent.action.VIEW"
-            android:data="amazeutils://teamamaze.xyz/transfer" />
+            android:data="amaze://teamamaze.xyz/transfer"
+            android:targetClass="com.amaze.fileutilities.home_page.MainActivity"
+            android:targetPackage="com.amaze.fileutilities"
+            />
     </shortcut>
 </shortcuts>
