--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -52,6 +52,17 @@
         app:layout_constraintTop_toBottomOf="@id/version"
         app:layout_constraintLeft_toLeftOf="parent"
         />
+    <TextView
+        android:id="@+id/home_screen_design"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/six_dp"
+        android:textSize="@dimen/twelve_sp"
+        android:textColor="@color/white"
+        app:layout_goneMarginTop="@dimen/eight_dp"
+        app:layout_constraintTop_toBottomOf="@id/rights_reserved"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 
     <!--<TextView
         android:id="@+id/preprod_copy"
@@ -71,7 +82,7 @@
     <TextView
         android:layout_width="@dimen/zero_dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/rights_reserved"
+        app:layout_constraintTop_toBottomOf="@id/home_screen_design"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
