--- a/app/src/main/res/layout/welcome_permission_privacy_layout.xml
+++ b/app/src/main/res/layout/welcome_permission_privacy_layout.xml
@@ -104,16 +104,37 @@
                 />
         </LinearLayout>
     </ScrollView>
-    <Button
-        android:id="@+id/doneButton"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cornerRadius="@dimen/material_generic"
-        app:backgroundTint="@color/highlight_yellow"
-        android:textColor="@color/navy_blue"
         android:layout_marginTop="@dimen/material_generic"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/done"
-        />
+        >
+        <CheckBox
+            android:id="@+id/license_agreement_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            />
+        <TextView
+            android:id="@+id/license_agreement_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/privacy_summary"
+            android:layout_marginLeft="@dimen/eight_dp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/eighteen_sp"
+            android:layout_toRightOf="@id/license_agreement_checkbox"
+            />
+        <Button
+            android:id="@+id/doneButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cornerRadius="@dimen/material_generic"
+            app:backgroundTint="@color/highlight_yellow"
+            android:textColor="@color/navy_blue"
+            android:text="@string/done"
+            android:layout_alignParentEnd="true"
+            />
+    </RelativeLayout>
 </RelativeLayout>
