--- a/app/src/main/res/layout/activity_main_actionbar_search.xml
+++ b/app/src/main/res/layout/activity_main_actionbar_search.xml
@@ -6,6 +6,7 @@
     android:layout_gravity="center_horizontal"
     android:gravity="center_vertical"
     android:padding="@dimen/two_dp"
+    android:visibility="gone"
     >
     <ImageView
         android:id="@+id/backActionBar"
