Fix transfer fragment viewbinder bug; fix audio player waveform list fragment bug; add share button in pdf and video player; remove dialog width limitation from video / image viewers

--- a/app/src/main/res/menu/pdf_activity.xml
+++ b/app/src/main/res/menu/pdf_activity.xml
@@ -12,6 +12,10 @@
         android:id="@+id/invert_colors"
         android:title="@string/invert_colors"
         />
+    <item
+        android:id="@+id/share"
+        android:title="@string/share"
+        />
     <!--<item
         android:id="@+id/copy_page"
         android:title="@string/copy_page"
