--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -90,6 +90,10 @@
         <item name="android:windowMinWidthMinor">85%</item>
     </style>
 
+    <style name="Custom.Dialog.Dark.NoStretch" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/background_curved_recents</item>
+    </style>
+
     <style name="roundedImageView" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/twenty_four_dp</item>
