--- a/app/src/main/res/layout/pdf_viewer_activity.xml
+++ b/app/src/main/res/layout/pdf_viewer_activity.xml
@@ -9,7 +9,9 @@
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/navy_blue"
+        />
     <com.amaze.fileutilities.home_page.CustomToolbar
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
