--- a/app/src/main/res/layout/media_type_header_layout.xml
+++ b/app/src/main/res/layout/media_type_header_layout.xml
@@ -3,12 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.google.android.material.imageview.ShapeableImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:alpha="0.4"
-        app:shapeAppearanceOverlay="@style/roundedImageView"
         />
     <View
         android:layout_width="wrap_content"
