WIP - Add pitch support for video player

--- a/app/src/main/res/menu/video_activity.xml
+++ b/app/src/main/res/menu/video_activity.xml
@@ -8,6 +8,10 @@
         android:id="@+id/playback_speed"
         android:title="@string/playback_speed"
         />
+    <!--<item
+        android:id="@+id/pitch_speed"
+        android:title="@string/pitch_speed"
+        />-->
     <item
         android:id="@+id/subtitles"
         android:title="@string/subtitles"
