--- a/app/src/main/res/layout/audio_player_notification.xml
+++ b/app/src/main/res/layout/audio_player_notification.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/root">
 
     <FrameLayout
         android:id="@+id/icon_frame"
