--- a/app/src/main/res/layout/fragment_image_viewer_metadata.xml
+++ b/app/src/main/res/layout/fragment_image_viewer_metadata.xml
@@ -74,12 +74,12 @@
             android:alpha="0.2"
             app:shapeAppearanceOverlay="@style/roundedImageView"
             />
-        <View
+        <!--<View
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
             android:background="@drawable/fading_gradient_curved"
-            />
+            />-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -153,12 +153,12 @@
             android:alpha="0.2"
             app:shapeAppearanceOverlay="@style/roundedImageView"
             />
-        <View
+        <!--<View
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="left"
             android:background="@drawable/fading_gradient_curved"
-            />
+            />-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
