--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -218,7 +218,36 @@
                 android:textColor="@color/white"
                 android:singleLine="true"
                 />
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/material_generic"
+                android:weightSum="1"
+                >
+                <ImageView
+                    android:id="@+id/repeatButton"
+                    android:layout_width="@dimen/twenty_four_dp"
+                    android:layout_height="@dimen/twenty_four_dp"
+                    app:srcCompat="@drawable/ic_round_repeat_24"
+                    android:layout_weight="0.10"
+                    />
+                <ImageView
+                    android:id="@+id/playbackProperties"
+                    android:layout_width="@dimen/twenty_four_dp"
+                    android:layout_height="@dimen/twenty_four_dp"
+                    app:srcCompat="@drawable/ic_round_speed_32"
+                    android:layout_weight="0.10"
+                    />
+                <ImageView
+                    android:id="@+id/shuffleButton"
+                    android:layout_width="@dimen/twenty_four_dp"
+                    android:layout_height="@dimen/twenty_four_dp"
+                    app:srcCompat="@drawable/ic_round_shuffle_24"
+                    android:layout_weight="0.10"
+                    />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/sixty_four_dp"
@@ -281,7 +310,7 @@
                 android:layout_marginBottom="@dimen/material_generic"
                 android:weightSum="1"
                 >
-                <ImageView
+                <!--<ImageView
                     android:id="@+id/repeatButton"
                     android:layout_width="@dimen/minimal_icon_size_small"
                     android:layout_height="@dimen/minimal_icon_size_small"
@@ -289,7 +318,7 @@
                     android:layout_marginRight="@dimen/material_generic"
                     android:layout_marginEnd="@dimen/material_generic"
                     android:layout_weight="0.35"
-                    />
+                    />-->
                 <ImageView
                     android:id="@+id/prevButton"
                     android:layout_width="@dimen/minimal_icon_size"
@@ -315,7 +344,7 @@
                     app:srcCompat="@drawable/ic_round_skip_next_32"
                     android:layout_weight="0.10"
                     />
-                <ImageView
+                <!--<ImageView
                     android:id="@+id/shuffleButton"
                     android:layout_width="@dimen/minimal_icon_size_small"
                     android:layout_height="@dimen/minimal_icon_size_small"
@@ -323,7 +352,7 @@
                     android:layout_marginRight="@dimen/material_generic"
                     android:layout_marginEnd="@dimen/material_generic"
                     android:layout_weight="0.35"
-                    />
+                    />-->
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
