--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -194,6 +194,7 @@
                 app:analysisTitle="@string/unused_apps"
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
+                app:hint="@string/unused_apps_hint"
                 android:visibility="gone"
                 />
 
@@ -204,6 +205,17 @@
                 app:analysisTitle="@string/large_apps"
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
+                />
+
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/games_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/games_installed"
+                app:hint="@string/games_installed_hint"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
+                android:visibility="gone"
                 />
 
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
