--- a/app/src/main/res/layout/activity_main_actionbar.xml
+++ b/app/src/main/res/layout/activity_main_actionbar.xml
@@ -3,35 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
-    android:layout_gravity="center_horizontal"
+    android:layout_gravity="center_vertical"
     >
     <ImageView
         android:id="@+id/options_image"
         app:srcCompat="@drawable/ic_baseline_notes_32"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:gravity="center_vertical"
         android:layout_marginLeft="@dimen/material_generic"
         android:layout_marginStart="@dimen/material_generic"
+        android:scaleType="fitCenter"
         />
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center_horizontal|center_vertical"
+        android:maxLines="1"
         android:textColor="@color/white" />
     <ImageView
         android:id="@+id/searchActionBar"
         app:srcCompat="@drawable/ic_baseline_search_32"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:gravity="center_vertical"
         android:layout_marginRight="@dimen/material_generic"
         android:layout_marginEnd="@dimen/material_generic"
+        android:scaleType="fitCenter"
         />
 </RelativeLayout>
