--- a/app/src/main/res/layout/media_type_layout.xml
+++ b/app/src/main/res/layout/media_type_layout.xml
@@ -16,6 +16,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/eighteen_sp"
         android:layout_marginTop="@dimen/material_generic"
+        android:maxLines="1"
         />
     <TextView
         android:id="@+id/media_summary"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/twelve_sp"
         android:textColor="@color/gray_text"
+        android:maxLines="1"
         />
     <LinearLayout
         android:layout_width="match_parent"
