Add image editor activity; add list apk files in analysis

--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -221,10 +221,9 @@
                 android:id="@+id/all_apks_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:analysisTitle="@string/old_recordings"
+                app:analysisTitle="@string/apk_files"
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
-                android:visibility="gone"
                 />
 
             <TextView
